# sysalrt

./: COUNTIBUTING.md  Cargo.toml  README.md
src/: email.rs  lib.rs  main.rs  ui.rs  usage.rs
src/templates/: index.html
