[package]
name = "sysalrt"
version = "0.3.0"
edition = "2021"
description = "A program that monitor system and send notification on resource threshold."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
indicatif = "0.17.8"
lazy_static = "1.4.0"
lettre = "0.11.4"
sysinfo = "0.30.5"
tera = "1.19.1"

[[bin]]
name = "sysalrt"
path = "src/main.rs"
